[package]
name = "libcrosscall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { git = "https://github.com/CosmWasm/cosmwasm.git", rev = "v1.0.0", features = ["staking", "stargate", "iterator"] }
cosmwasm-vm = { git = "https://github.com/CosmWasm/cosmwasm.git", rev = "v1.0.0", features = ["staking", "stargate", "iterator"] }
#cosmwasm-std = { path = "/Volumes/E/project/github.com/okx/cosmwasm/std" }
#cosmwasm-vm = { path = "/Volumes/E/project/github.com/okx/cosmwasm/vm" }
wasmvm = { path = "../libwasmvm" }
#wasmvm = { git = "https://github.com/CosmWasm/wasmvm.git", rev = "v1.0.0"}
